# simba

./: Cargo.toml  LICENSE.txt  README.md  pipeline.yaml
lua/: json.lua  simba.lua  templates.lua
src/: config.rs  error.rs  lua.rs  main.rs
src/event/: console.rs  json.rs  mod.rs
src/output/: console.rs  json.rs  mod.rs
src/pipeline/: executor.rs  http_call.rs  mod.rs  post_script.rs  render_step.rs  when_clause.rs
src/script/: lua.rs  mod.rs
src/template/: mod.rs
